git ignore file standardised for java and intelliJ

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
-.idea/
-Syntax/
-javaprogramming.iml
+##############################
+## Java
+##############################
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
+
+##############################
+## IntelliJ
+##############################
 out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
+##############################
+## individual
+##############################
+
+Syntax/
